# moonfish

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: benchmark-help.yml  benchmark.yml  ci.yml  nps-benchmark.yml  release.yml
lichess/: README.md  setup_macos.sh
moonfish/: bench.py  bulletchess_compat.py  config.py  helper.py  lib.py  main.py  move_ordering.py  psqt.py
moonfish/engines/: alpha_beta.py  base_engine.py  l1p_alpha_beta.py  l2p_alpha_beta.py  lazy_smp.py  nn_engine.py  random.py
moonfish/evaluation/: __init__.py  base.py  classical.py  nn.py
moonfish/mode/: api.py  uci.py
moonfish/models/: nnue_v1.npz
moonfish/rl/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
moonfish/rl/examples/: basic_usage.py  openenv_training.py
moonfish/rl/server/: Dockerfile  __init__.py  app.py  chess_environment.py
moonfish/rl/server/static/: index.html
scripts/: benchmark.sh  generate_training_data.py  train_nnue.py
tests/: test.py  test_bratko_kopec.py
