[build-system]
requires = ["setuptools>=75", "wheel", "setuptools-scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moonfish"
dynamic = ["version"]
readme = "README.md"
description = "Moonfish is a didactic Python chess engine showcasing parallel search algorithms and modern chess programming techniques."
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Lucca Bertoncini", email = "luccabazzo@gmail.com"},
]
dependencies = [
  "chess",
  "click",
  "Flask",
  "Flask-Cors",
  "parameterized",
  "pyinstaller",
  "mypy",
  "flake8",
  "black",
  "isort",
  "ufmt",
  "types-flask-cors>=6.0.0.20250520",
]

[project.scripts]
moonfish = "moonfish.main:main"

[project.optional-dependencies]
rl = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "httpx>=0.24.0",
  "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["moonfish", "moonfish.rl", "moonfish.rl.server", "moonfish.rl.examples"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"moonfish" = ["py.typed"]

[[tool.mypy.overrides]]
module = [
    "parameterized.*",
    "httpx",
    "httpx.*",
    "fastapi",
    "fastapi.*",
    "pydantic",
    "pydantic.*",
    "uvicorn",
    "uvicorn.*",
]
ignore_missing_imports = true

[project.urls]
Homepage = "https://github.com/luccabb/moonfish"
Issues = "https://github.com/luccabb/moonfish/issues"
